# pixrobots-os

./: .gitignore  COMMUNITY.md  Makefile  README.md  agricul.md
pixelos/: .env.example  README.md  pixelos  pyproject.toml  setup.py
pixelos/config/: alerts.yaml  nodes.yaml  pixelos.yaml
pixelos/dashboard/: app.py
pixelos/scripts/: install-agent.sh  install-server.sh  pixelos-agent.rc  seed_data.py
pixelos/src/agent/: agent.py  collector.py  edge_inference.py  training_scheduler.py
pixelos/src/cli/: main.py
pixelos/src/core/: __init__.py  agriproduction.py  backup.py  bgdatasys.py  config.py  cultivation.py  discovery.py  dns.py  energy.py  ftp.py  geothermal.py  harvest.py  ipc.py  ipc_routes.py  laboratory.py  lifecycle.py  mqtt.py  omics.py  ontology.py  orchestrator.py  orchestrator_class.py  orchestrator_routes.py  ota.py  pixdefend.py  pixdefend_routes.py  pixdht.py  pixdht_routes.py  pixscudo.py  pixscudo_routes.py  pixstat.py  pixstat_routes.py  plantes_db.py  predictor.py  production.py  programs.py  provisioning.py  rl_controller.py  services.py  spaces.py  tasks.py  (+8 more)
pixelos/src/core/backup/: pixbackup.py  routes.py
pixelos/src/core/boot/: bootstrap.py  installer.py  routes.py
pixelos/src/core/browser/: __init__.py  nop_browser.py  nop_privacy.py  nop_resolver.py  nop_wallet_bridge.py  routes.py
pixelos/src/core/comms/: __init__.py  comms_routes.py  matrix_comms.py
pixelos/src/core/digital_twin/: routes.py  twin.py
pixelos/src/core/federation/: __init__.py  biodiversity.py  hub.py  (+6 more)
pixelos/src/ml/: pipeline.py
pixelos/src/web/: app.py
(+403 files in other folders)
