[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelos"
version = "2.0.0"
description = "PixelOS - Système de Gestion Agricole Connecté"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "paho-mqtt>=1.6",
    "structlog>=23.0",
    "requests>=2.28",
    "psutil>=5.9",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
full = ["flask>=3.0", "mysql-connector-python>=8.0", "pymongo>=4.5"]

[project.scripts]
pixelos = "cli.main:main"
pixelos-agent = "agent.agent:main"
pixelos-web = "web.app:main"

[tool.setuptools.packages.find]
where = ["src"]
